[package]
name = "dprint-swc-ext"
version = "0.25.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/dprint/dprint-swc-ext"
description = "Functionality to make swc easier to work with."

[package.metadata.docs.rs]
all-features = true

[features]
sourcemap = ["swc_common/sourcemap"]
view = ["bumpalo", "allocator-api2"]

[dependencies]
allocator-api2 = { version = "0.2.21", optional = true }
bumpalo = { version = "3.19.0", optional = true, features = ["collections", "allocator-api2"] }
num-bigint = "0.4"
rustc-hash = "2.1.1"
swc_atoms = "7.0.0"
swc_common = "14.0.4"
swc_ecma_ast = "15.0.0"
swc_ecma_lexer = "23.0.0"
swc_ecma_parser = "23.0.0"
text_lines = "0.6.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
