[package]
name = "dprint-swc-ecma-ast-view"
version = "0.56.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
license = "MIT"
description = "View of the swc AST that's easier to navigate."

[dependencies]
bumpalo = "3.9.1"
dprint-swc-ext = { version = "0.1.0", path = "../swc-ext" }
num-bigint = "0.4"
rustc-hash = "1.1.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
